--- a/CSS.css
+++ b/CSS.css
@@ -37,6 +37,7 @@ body {
 }
 
 #name {
+    cursor: pointer;
     margin-top: 60px;
     margin-right: 30px;
     font-size: 45px;
@@ -45,6 +46,7 @@ body {
 }
 
 #bio {
+    cursor: pointer;
     margin-top: 10px;
     margin-right: 50px;
     font-size: 25px;
