--- a/B3 3.css
+++ b/B3 3.css
@@ -1,40 +1,85 @@
 /* styles.css */
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
+    width: 95%;
+    max-width: 1000px;
+    margin: auto;
+    background-color: rgb(231, 231, 231);
 
-.container {
-    width: 80%;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 header {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 650px;
+}
+
+.container {
+    max-width: 650px;
 }
 
 article img {
     display: block;
-    max-width: 100%;
+    width: 95%;
+    max-width: 700px;
     height: auto;
-    margin: 20px auto;
 }
 
-h2, h3, h4, h5, h6 {
-    font-size: 14px;
+header span {
     font-weight: bold;
-    margin-top: 30px;
+    font-size: small;
 }
 
-p {
-    line-height: 1.6;
-    margin: 15px 0;
+#head1 {
+    color: rgb(150, 150, 150);
+}
+
+#head2 {
+    color: rgb(94, 94, 94);
+}
+
+#head3 {
+    color: rgb(255, 51, 0);
+}
+
+#head4 {
+    color: rgb(95, 95, 95);
+}
+
+a {
+    color: rgb(78, 78, 78);
+    font-size: smaller;
+    text-decoration: none;
+}
+
+.link {
+    line-height: 30px;
+}
+
+.other {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 20px;
+}
+
+div a {
+    max-width: 160px
+}
+
+.end {
+    text-align: right;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    margin-bottom: 100px;
+    background-color: rgb(231, 231, 231);
+    width: max-content;
+    padding: 7px;
+    border-radius: 20px;
+    float: right;
+}
+
+#region {
+    padding: 30px;
+    margin-top: 50px;
+    width: 95%;
+    max-width: 900px;
+    background-color: white;
 }
