--- a/B3 Lotus.css
+++ b/B3 Lotus.css
@@ -4,16 +4,15 @@ body {
 
 .container {
     background-color: rgb(255, 255, 255);
-    width: 95%;
-    max-width: 750px;
+    max-width: 560px;
     padding: 100px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto Slab;
     margin: auto;
 }
 
 h2 {
     font-size: 28px;
-    color: rgb(1, 134, 139);
+    color: rgb(19, 151, 151);
 }
 
 #tittle {
@@ -24,14 +23,19 @@ h2 {
 
 #head {
     color: rgb(255, 255, 255);
-    background-color: rgb(0, 174, 180);
+    background-color: rgb(66, 189, 189);
     line-height: 22px;
 }
 
-li {
+li a {
+    text-decoration: none;
     color: rgb(94, 94, 94);
     font-size: smaller;
     line-height: 18px;
+}
+
+li :hover {
+    color: rgb(228, 228, 19);
 }
 
 p {
@@ -41,17 +45,24 @@ p {
 }
 
 img {
-    width: 90%;
-    max-width: 600px;
+    width: 500px;
+}
+
+figure {
+    margin-left: 0px;
+    width: 500px;
+    height: 410px;
+    padding: 10px 30px;
+    background-color: rgb(194, 186, 186);
 }
 
 figcaption {
     text-align: center;
-    width: 90%;
-    max-width: 600px;
     font-size: 15px;
-    color: rgb(1, 134, 139);
+    color: rgb(66, 68, 189);
     font-style: italic;
+    font-weight: bolder;
+    margin: 10px -12px;
 }
 
 span {
