--- a/Test.css
+++ b/Test.css
@@ -20,6 +20,7 @@ body {
 }
 
 .avatar {
+    display: flex;
     background-color: rgb(20, 20, 20);
     height: fit-content;
     position: static;
