--- a/Home.css
+++ b/Home.css
@@ -84,6 +84,10 @@ body {
     transform: skew(-10deg, 0deg);
     opacity: 90%;
     height: 40vw;
+    rotate: 5deg;
+    box-shadow: 15px 15px 30px rgba(210, 97, 255, 0.767);
+    border-right: 7px solid rgba(75, 0, 105, 0.192);
+    border-bottom: 7px solid rgba(75, 0, 105, 0.192);
 }
 
 @media (max-width: 900px) {
