--- a/Home.css
+++ b/Home.css
@@ -53,6 +53,7 @@ body {
 
 .nav-item a:hover {
     background-color: #00000027;
+    color: rgb(0, 225, 255);
 }
 
 .nav-item a:active {
@@ -82,6 +83,7 @@ body {
 
 .img :hover {
     transform: skew(-10deg, 0deg);
+    scale: 1.1;
     opacity: 90%;
     height: 40vw;
     rotate: 5deg;
