--- a/B5 Material.css
+++ b/B5 Material.css
@@ -31,7 +31,7 @@ html {
 }
 
 body {
-    margin: 0px;
+    margin: 0px 5px 0px 80px;
 }
 
 li {
@@ -48,11 +48,12 @@ li {
     margin: 0px;
     padding: 0;
     width: 80px;
-    background-color: #292929;
+    background-color: #1d1d1d;
     position: fixed;
+    left: 0px;
     height: 100%;
     overflow: auto;
-    margin-top: -10px;
+    margin-top: 0px;
 }
 
 a div,
@@ -99,8 +100,10 @@ i {
 }
 
 .content {
-    width: calc(100vw - 100px);
-    margin: 10px 10px 10px 90px;
+    width: calc(100vw - 110px);
+    max-width: 1802px;
+    padding: 20px 0px;
+    margin: auto;
 }
 
 .head {
@@ -110,34 +113,32 @@ i {
 .hleft {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: calc(50vw - 160px);
-    height: 500px;
+    max-width: 796px;
+    height: 504px;
     padding: 0px 50px;
     background-color: rgb(31, 31, 31);
     border-radius: 18px;
 }
 
 .hright {
-    right: 10px;
     width: calc(50vw - 60px);
-    height: 500px;
+    max-width: 896px;
+    height: 504px;
     overflow: hidden;
     border-radius: 18px;
     margin-left: 10px;
 }
 
 .hright img {
-    height: 500px;
+    height: 504px;
 }
 
 h1 {
     font-size: 70px;
     line-height: 1;
-}
-
-.center {
-    align-items: center;
-    height: fit-content;
+    margin: 0px;
 }
 
 .center p {
@@ -155,66 +156,175 @@ h1 {
     font-weight: bolder;
 }
 
-@media (max-width: 1300px) {
-    .head {
-        display: grid;
-        grid-template-rows: repeat(2, 1fr);
-    }
-
-    .hleft {
-        width: calc(90vw - 160px);
-        margin-left: 15px;
-    }
-
-    .hright {
-        margin-top: 5px;
-        width: calc(90vw - 60px);
-        margin-left: 15px;
-    }
-}
-
 .bodie {
-    width: calc(90vw - 170px);
-    max-width: 1220px;
+    width: calc(100vw - 110px);
+    max-width: 1200px;
     margin: auto;
 }
 
 h2 {
     font-size: 50px;
+    margin: 70px 0px 10px 20px;
+    color: beige;
 }
 
-.ph1 {
-    display: flex;
+.ph {
+    display: grid;
+    width: calc(100vw - 110px);
+    max-width: 1200px;
 }
 
-.list1 {
-    width: calc(30vw - 70px);
-    max-width: 400px;
+#ph1 {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+#ph2 {
+    grid-template-columns: repeat(3, 2fr);
+}
+
+#ph3 {
+    grid-template-columns: repeat(2, 2fr);
+}
+
+.list {
+    width: calc(33vw - 50px);
+    max-width: 390px;
     margin: 5px;
     overflow: hidden;
     border-radius: 15px;
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(26, 26, 26);
 }
 
-.ph1 .img {
-    width: calc(30vw - 70px);
-    max-width: 400px;
-    height: 200px;
+#ph3 .list {
+    width: calc(49.5vw - 75px);
+    max-width: 585px;
+}
+
+.ph .img {
+    width: calc(33vw - 50px);
+    max-width: 390px;
+    height: 190px;
     overflow: hidden;
     border-radius: 15px;
 }
 
-.ph1 img {
+.ph img {
     align-items: center;
-    width: 400px;
-    height: 200px;
+    width: 390px;
+    height: 190px;
 }
 
 h3 {
-    font-size: 20px;
-    margin: 10px;
+    font-size: 18px;
+    margin: 20px 20px 10px 20px;
 }
 
-.list1 p {
-    margin: 10px;
+.list p {
+    margin: 10px 20px;
+    font-size: 15px;
+}
+
+.footer {
+    display: flex;
+    width: calc(90vw - 110px);
+    max-width: 1200px;
+    margin: auto;
+}
+
+.foot1 {
+    width: 30em;
+}
+
+.foot1 i {
+    margin-left: 0px;
+
+}
+
+.text {
+    margin: 20px 20px 0px 0px;
+}
+
+.grid {
+    margin: 25px 0px 0px 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+}
+
+.grid .title {
+    margin-left: 30px;
+    margin-right: 40px;
+    margin-bottom: 25px;
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.815);
+}
+
+.linked a {
+    margin-left: 30px;
+    margin-right: 40px;
+    display: block;
+    margin-bottom: 25px;
+    color: rgb(180, 114, 255);
+    font-size: 17px;
+}
+
+.linked :hover {
+    color: rgb(114, 170, 255);
+}
+
+.icon :hover {
+    color: #f1b7ff;
+}
+
+.end {
+    display: flex;
+    width: calc(90vw - 110px);
+    max-width: 1200px;
+    margin: auto;
+}
+
+.end :hover {
+    color: rgba(255, 255, 255, 0.726);
+    cursor: pointer;
+}
+
+.eli {
+    padding-right: 40px;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+#gg {
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+@media (max-width: 1300px) {
+    .head {
+        display: block;
+    }
+
+    .hleft {
+        width: calc(95vw - 160px);
+        max-width: 1100px;
+        margin: 5px;
+        height: 404px;
+    }
+
+    .hright {
+        max-width: 1200px;
+        margin-top: 8px;
+        width: calc(95vw - 60px);
+        margin-left: 5px;
+        height: auto;
+    }
+
+    .hright img {
+        max-width: 1200px;
+        width: calc(95vw - 60px);
+    }
+
+    .ph1 {
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+    }
 }
