--- a/Home.css
+++ b/Home.css
@@ -21,7 +21,7 @@ body {
     backdrop-filter: blur(30px);
     background-blend-mode: overlay;
     overflow: hidden;
-    transition: 0.3s;
+    transition: opacity 0.3s;
 }
 
 .navbar {
@@ -292,7 +292,7 @@ body {
     }
 
     .nav-right {
-        margin-right: -50vw;
+        margin-right: -500vw;
         opacity: 0;
     }
 
@@ -335,116 +335,6 @@ body {
         opacity: 1;
     }
 
-    .img {
-        display: flex;
-    }
-
-    .img {
-        padding: 0px;
-        margin: 10% 5% 20% 5%;
-    }
-
-    .img img {
-        width: 30vw;
-        height: 40vw;
-        max-width: 330px;
-        max-height: 440px;
-        border: 4px solid rgba(75, 0, 105, 0.192);
-        border-radius: 15px;
-        box-shadow: 10px 10px 20px rgba(122, 0, 170, 0.5);
-        transition: 0.5s;
-    }
-
-    .img :hover {
-        transform: skew(-10deg, 0deg);
-        scale: 1.1;
-        opacity: 90%;
-        rotate: 5deg;
-        box-shadow: 15px 15px 30px rgba(210, 97, 255, 0.767);
-        border-right: 7px solid rgba(75, 0, 105, 0.192);
-        border-bottom: 7px solid rgba(75, 0, 105, 0.192);
-    }
-
-    .inf {
-        display: flex;
-        transition: 0.5s;
-    }
-
-    .text {
-        margin: 8% 0% 0% 10%;
-        width: 70%;
-        max-width: 800px;
-        min-width: 400px;
-    }
-
-    .name {
-        font-size: 60px;
-        font-weight: bold;
-        color: #e1dbff;
-        margin-bottom: 25px;
-    }
-
-    .career {
-        line-height: 1.3;
-        font-size: 70px;
-        font-weight: bolder;
-        background: linear-gradient(to right, #6200ff, #ffffff);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-    }
-
-    .bio {
-        width: 95%;
-        margin-top: 50px;
-        font-size: 20px;
-        color: #dfcbff;
-    }
-
-    .icon {
-        display: flex;
-        align-items: center;
-        margin: 30px;
-    }
-
-    .icon a img {
-        width: 50px;
-        margin: 15px;
-        transition: 0.5s;
-    }
-
-    .icon a :active {
-        filter: blur(2px)
-    }
-
-    .icon a :hover {
-        scale: 120%;
-    }
-
-    .linkto a {
-        text-decoration: none;
-        color: white;
-        font-size: 25px;
-        font-weight: bolder;
-        background: linear-gradient(to right, #6200ff, #a934ec);
-        border-radius: 50px;
-        margin: 30px 40px;
-        padding: 15px 40px;
-        transition: 0.1s;
-    }
-
-    .linkto :hover {
-        background: linear-gradient(to right, #6200ff, #a934ec);
-        font-weight: bold;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        margin: 30px 37px;
-        border: 3px solid rgb(132, 0, 255);
-    }
-
-    .linkto :active {
-        text-shadow: 0 0 5px #e100ff, 0 0 5px #e100ff, 0 0 5px #e100ff;
-        border-color: rgb(89, 0, 255);
-    }
 }
 
 
