--- a/Home.css
+++ b/Home.css
@@ -53,7 +53,7 @@ body {
     display: flex;
     margin: 10px 15px 0px 10px;
     align-items: center;
-    transition: linear 0.3s;
+    transition: 0.3s ease;
 }
 
 .nav-item {
@@ -85,6 +85,7 @@ body {
 
 .nav-small {
     width: 30px;
+    height: 30px;
     padding-left: 0px;
     right: 20px;
     top: -30px;
@@ -96,7 +97,6 @@ body {
     margin-bottom: 20px;
     position: fixed;
     background-blend-mode: overlay;
-    overflow: hidden;
     list-style-type: none;
     text-align: center;
     cursor: pointer;
@@ -108,7 +108,7 @@ body {
 
 #nav-icon-1 {
     z-index: 104;
-    right: 24px;
+    right: 4px;
     position: fixed;
 }
 
@@ -116,8 +116,7 @@ body {
     z-index: 102;
     color: rgba(208, 150, 255, 0.767);
     opacity: 0;
-    margin-top: -90px;
-    transition: linear 0.5s;
+    transition: 0.5s ease;
 }
 
 .nav-small a {
@@ -130,7 +129,7 @@ body {
 
 .nav-small:hover .hide {
     opacity: 1;
-    margin-top: 50px;
+    transform: translateY(+50px);
 }
 
 .avt {
@@ -143,7 +142,7 @@ body {
 .img {
     padding: 0px;
     margin: 10% 5% 20% 5%;
-    transition: linear 0.3s;
+    transition: 0.3s ease;
 }
 
 .img img {
@@ -154,6 +153,7 @@ body {
     border: 4px solid rgba(75, 0, 105, 0.192);
     border-radius: 15px;
     box-shadow: 10px 10px 20px rgba(122, 0, 170, 0.5);
+    transition: 0.3s ease;
 }
 
 .img :hover {
@@ -247,6 +247,27 @@ body {
     border-color: rgb(89, 0, 255);
 }
 
+@keyframes hideItem {
+    0% {
+        display: block;
+    }
+
+    100% {
+        display: none;
+    }
+}
+
+@keyframes showItem {
+    0% {
+
+        display: none;
+    }
+
+    100% {
+        display: block;
+    }
+}
+
 @media (min-width: 1200px) {
     .img {
         margin-left: 13%;
@@ -263,9 +284,13 @@ body {
 
 @media (max-width: 900px) {
     .img {
-        margin-right: -100px;
-        scale: 0.7;
+        margin: 10% 0% 20% -15%;
+        transform: translateX(+300px);
         opacity: 0;
+    }
+
+    .text {
+        width: 90vh;
     }
 
     .name {
@@ -302,7 +327,8 @@ body {
     }
 
     .nav-right {
-        margin-right: -300px;
+        z-index: 100;
+        transform: translateX(+300px);
         opacity: 0;
     }
 
@@ -341,7 +367,7 @@ body {
 
     .nav-small {
         display: block;
-        top: 10px;
+        transform: translateY(+40px);
         opacity: 1;
     }
 
