--- a/Home.css
+++ b/Home.css
@@ -112,6 +112,10 @@ body {
     position: fixed;
 }
 
+.nav-small i:hover {
+    text-shadow: 0 0 5px #ae00ff, 0 0 5px #00c3ff, 0 0 5px #e100ff;
+}
+
 .nav-small .hide {
     z-index: 102;
     color: rgba(208, 150, 255, 0.767);
@@ -134,9 +138,17 @@ body {
 
 .avt {
     margin: 5px 10px 0px 0px;
-    border: 2px solid #d0a7ff;
+    background: linear-gradient(45deg, #6200ff, #f7d7ff);
+    padding: 2px;
     border-radius: 50%;
+    position: relative;
     height: 50px;
+    box-shadow: 0 0 6px 4px rgba(133, 81, 255, 0.6), 0 0 4px 6px rgba(241, 90, 255, 0.3);
+}
+
+.avt:hover {
+    background: linear-gradient(45deg, rgb(133, 81, 255), rgb(241, 90, 255));
+    box-shadow: 0 0 6px 4px rgba(255, 52, 164, 0.6), 0 0 4px 6px rgba(93, 90, 255, 0.3);
 }
 
 .img {
@@ -177,6 +189,12 @@ body {
     max-width: 800px;
     min-width: 400px;
 }
+
+.name:hover {
+    text-shadow: 0 0 5px #ae00ff, 0 0 5px #00c3ff, 0 0 5px #e100ff;
+}
+
+.text a:hover {}
 
 .name {
     font-size: 60px;
@@ -240,10 +258,12 @@ body {
     -webkit-text-fill-color: transparent;
     margin: 30px 37px;
     border: 3px solid rgb(132, 0, 255);
+    box-shadow: 0 0 3px 2px rgba(133, 81, 255, 0.6), 0 0 2px 3px rgba(241, 90, 255, 0.3);
 }
 
 .linkto :active {
     text-shadow: 0 0 5px #e100ff, 0 0 5px #e100ff, 0 0 5px #e100ff;
+    box-shadow: 0 0 3px 2px rgba(255, 52, 164, 0.6), 0 0 2px 3px rgba(93, 90, 255, 0.3);
     border-color: rgb(89, 0, 255);
 }
 
@@ -359,10 +379,13 @@ body {
     }
 
     .avt {
-        margin: 5px 10px 0px 0px;
-        border: 2px solid #d0a7ff;
-        border-radius: 50%;
         height: 40px;
+        box-shadow: 0 0 3px 2px rgba(133, 81, 255, 0.6), 0 0 2px 3px rgba(241, 90, 255, 0.3);
+    }
+
+    .avt:hover {
+        background: linear-gradient(45deg, rgb(133, 81, 255), rgb(241, 90, 255));
+        box-shadow: 0 0 3px 2px rgba(255, 52, 164, 0.6), 0 0 2px 3px rgba(93, 90, 255, 0.3);
     }
 
     .nav-small {
