--- a/Tool.css
+++ b/Tool.css
@@ -94,3 +94,18 @@ body {
 a {
     text-decoration: none;
 }
+
+.ic i {
+    position: fixed;
+    left: 20px;
+    top: 20px;
+    font-size: 30px;
+    color: rgb(199, 230, 255);
+    padding: 15px;
+    background-color: rgb(22, 22, 22);
+    border-top: 2px solid rgba(255, 255, 255, 0.664);
+    border-left: 2px solid rgba(255, 255, 255, 0.664);
+    border-right: 2px solid rgba(51, 51, 51, 0.61);
+    border-bottom: 2px solid rgba(51, 51, 51, 0.61);
+    border-radius: 50%;
+}
