--- a/Home.css
+++ b/Home.css
@@ -15,7 +15,7 @@ html {
     /* Giá trị mặc định */
     --Hig: 100vh;
     /* Giá trị mặc định */
-    --pix: calc(var(--pix) * 1);
+    --pot: calc(var(--pot) * 1);
 }
 
 ::selection {
@@ -35,7 +35,7 @@ body {
     top: 0px;
     left: 0px;
     width: 100vw;
-    height: calc(var(--pix) * 80);
+    height: calc(var(--pot) * 80);
     background-color: rgba(0, 0, 0, 0.336);
     backdrop-filter: blur(1.6vw);
     background-blend-mode: overlay;
@@ -51,25 +51,25 @@ body {
     z-index: 101;
     display: flex;
     justify-content: space-between;
-    height: calc(var(--pix) * 80);
+    height: calc(var(--pot) * 80);
     padding: 0px;
     list-style-type: none;
 }
 
 .nav-left,
 .nav-right {
-    padding: 0px 0px 0px calc(var(--pix) * 5);
-    height: calc(var(--pix) * 60);
+    padding: 0px 0px 0px calc(var(--pot) * 5);
+    height: calc(var(--pot) * 60);
     list-style-type: none;
     position: fixed;
     display: flex;
-    margin: calc(var(--pix) * 10) calc(var(--pix) * 15) 0px calc(var(--pix) * 10);
+    margin: calc(var(--pot) * 10) calc(var(--pot) * 15) 0px calc(var(--pot) * 10);
     align-items: center;
     transition: 0.3s ease;
 }
 
 .nav-right {
-    right: calc(var(--pix) * 10);
+    right: calc(var(--pot) * 10);
 }
 
 .nav-item {
@@ -79,19 +79,19 @@ body {
 }
 
 .nav-item a {
-    font-size: calc(var(--pix) * 20);
+    font-size: calc(var(--pot) * 20);
     font-weight: bold;
     color: rgb(255, 255, 255);
     text-decoration: none;
-    padding: calc(var(--pix) * 8) calc(var(--pix) * 14);
+    padding: calc(var(--pot) * 8) calc(var(--pot) * 14);
     transition: background-color linear 0.3s;
-    border-radius: calc(var(--pix) * 15);
+    border-radius: calc(var(--pot) * 15);
     transition: all linear 0.5s;
     align-items: center;
 }
 
 .nav-item a:hover {
-    text-shadow: 0 0 calc(var(--pix) * 3) #ae00ff, 0 0 calc(var(--pix) * 3) #00c3ff, 0 0 calc(var(--pix) * 3) #fad7ff;
+    text-shadow: 0 0 calc(var(--pot) * 3) #ae00ff, 0 0 calc(var(--pot) * 3) #00c3ff, 0 0 calc(var(--pot) * 3) #fad7ff;
     background-color: #00000027;
     color: rgb(204, 164, 255);
 }
@@ -101,17 +101,17 @@ body {
 }
 
 .nav-small {
-    width: calc(var(--pix) * 30);
-    height: calc(var(--pix) * 30);
+    width: calc(var(--pot) * 30);
+    height: calc(var(--pot) * 30);
     padding-left: 0px;
-    right: calc(var(--pix) * 20);
-    top: calc(var(--pix) * -30);
+    right: calc(var(--pot) * 20);
+    top: calc(var(--pot) * -30);
     transition: 0.5s;
     z-index: 103;
-    font-size: calc(var(--pix) * 25);
+    font-size: calc(var(--pot) * 25);
     opacity: 0;
     color: rgba(255, 255, 255, 0.767);
-    margin-bottom: calc(var(--pix) * 20);
+    margin-bottom: calc(var(--pot) * 20);
     position: fixed;
     background-blend-mode: overlay;
     list-style-type: none;
@@ -120,17 +120,17 @@ body {
 }
 
 .nav-small i {
-    margin-bottom: calc(var(--pix) * 20);
+    margin-bottom: calc(var(--pot) * 20);
 }
 
 #nav-icon-1 {
     z-index: 104;
-    right: calc(var(--pix) * 4);
+    right: calc(var(--pot) * 4);
     position: fixed;
 }
 
 .nav-small i:hover {
-    text-shadow: 0 0 calc(var(--pix) * 5) #ae00ff, 0 0 calc(var(--pix) * 5) #00c3ff, 0 0 calc(var(--pix) * 5) #e100ff;
+    text-shadow: 0 0 calc(var(--pot) * 5) #ae00ff, 0 0 calc(var(--pot) * 5) #00c3ff, 0 0 calc(var(--pot) * 5) #e100ff;
 }
 
 .nav-small .hide {
@@ -154,102 +154,123 @@ body {
 }
 
 .avt {
-    margin: calc(var(--pix) * 5) calc(var(--pix) * 10) 0px 0px;
+    margin: calc(var(--pot) * 5) calc(var(--pot) * 10) 0px 0px;
     background: linear-gradient(45deg, #6200ff, #f7d7ff);
-    padding: calc(var(--pix) * 2);
+    padding: calc(var(--pot) * 2);
     border-radius: 50%;
     position: relative;
-    height: calc(var(--pix) * 50);
-    box-shadow: 0 0 calc(var(--pix) * 6) calc(var(--pix) * 4) rgba(133, 81, 255, 0.6), 0 0 calc(var(--pix) * 4) calc(var(--pix) * 6) rgba(241, 90, 255, 0.3);
+    height: calc(var(--pot) * 50);
+    box-shadow: 0 0 calc(var(--pot) * 6) calc(var(--pot) * 4) rgba(133, 81, 255, 0.6), 0 0 calc(var(--pot) * 4) calc(var(--pot) * 6) rgba(241, 90, 255, 0.3);
 }
 
 .avt:hover {
     background: linear-gradient(45deg, rgb(133, 81, 255), rgb(241, 90, 255));
-    box-shadow: 0 0 calc(var(--pix) * 6) calc(var(--pix) * 4) rgba(255, 52, 164, 0.6), 0 0 calc(var(--pix) * 4) calc(var(--pix) * 6) rgba(93, 90, 255, 0.3);
+    box-shadow: 0 0 calc(var(--pot) * 6) calc(var(--pot) * 4) rgba(255, 52, 164, 0.6), 0 0 calc(var(--pot) * 4) calc(var(--pot) * 6) rgba(93, 90, 255, 0.3);
+}
+
+
+.inf {
+    margin-top: calc(var(--pot) * 80);
+    display: grid;
+    transition: 0.5s;
+    grid-template-columns: repeat(2, 2fr);
 }
 
 .img {
+    width: 33vw;
+    /* height: 40vw; */
     padding: 0px;
-    margin: 10% 5% 20% 5%;
-    transition: 0.3s ease;
-    transition-delay: 1s;
+    justify-content: center;
+    /* margin: 10% 5% 20% 5%; */
+    /* transition: 0.3s ease; */
+    /* transition-delay: 1s; */
 }
 
 .img img {
-    width: 30vw;
-    height: 40vw;
-    max-width: 330px;
-    max-height: 440px;
-    border: calc(var(--pix) * 4) solid rgba(75, 0, 105, 0.192);
-    border-radius: calc(var(--pix) * 15);
-    box-shadow: calc(var(--pix) * 10) calc(var(--pix) * 10) calc(var(--pix) * 20) rgba(122, 0, 170, 0.5);
+    width: 18vw;
+    height: 24vw;
+    margin: 3vw 7.5vw;
+    /* max-width: calc(var(--pot) * 330);
+    max-height: calc(var(--pot) * 440); */
+    border: 0.5vw solid rgba(75, 0, 105, 0.192);
+    border-radius: 1.7vw;
+    box-shadow: 0.5vw 0.5vw 2vw rgba(122, 0, 170, 0.5);
     transition: 0.3s ease;
 }
 
-.img :hover {
+.img:hover img {
     transform: skew(-10deg, 0deg);
     scale: 1.1;
     opacity: 90%;
     rotate: 5deg;
-    box-shadow: calc(var(--pix) * 15) calc(var(--pix) * 15) calc(var(--pix) * 30) rgba(210, 97, 255, 0.767);
-    border-right: calc(var(--pix) * 7) solid rgba(75, 0, 105, 0.192);
-    border-bottom: calc(var(--pix) * 7) solid rgba(75, 0, 105, 0.192);
-}
-
-.inf {
-    display: flex;
-    transition: 0.5s;
+    box-shadow: 0.8vw 0.8vw 3vw rgba(210, 97, 255, 0.767);
+    border-right: 0.7vw solid rgba(75, 0, 105, 0.192);
+    border-bottom: 0.7vw solid rgba(75, 0, 105, 0.192);
+    border-left: 0.3vw solid rgba(75, 0, 105, 0.192);
+    border-top: 0.3vw solid rgba(75, 0, 105, 0.192);
 }
 
 .text {
-    margin: 8% 0% 0% 10%;
-    width: 70%;
-    max-width: 800px;
-    min-width: 400px;
+    margin: 3vw 3vw 3vw 8vw;
+    width: 52vw;
+    /* max-width: calc(var(--pot) * 800);
+    min-width: calc(var(--pot) * 400); */
 }
 
 .text div {
     transition: 0.5s;
 }
 
-.name:hover {
-    text-shadow: 0 0 calc(var(--pix) * 5) #ae00ff, 0 0 calc(var(--pix) * 5) #00c3ff, 0 0 calc(var(--pix) * 5) #e100ff;
-}
-
 .text a:hover {}
 
 .name {
-    font-size: calc(var(--pix) * 60);
+    font-size: 5vw;
     font-weight: bold;
     color: #e1dbff;
-    margin-bottom: calc(var(--pix) * 25);
+    margin-bottom: 2vw;
+    width: fit-content;
+}
+
+.name:hover {
+    text-shadow: 0 0 0.5vw #ae00ff, 0 0 0.5vw #00c3ff, 0 0 0.5vw #e100ff;
 }
 
 .career {
     line-height: 1.3;
-    font-size: calc(var(--pix) * 70);
+    font-size: 6vw;
     font-weight: bolder;
     background: linear-gradient(to right, #6200ff, #ffffff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
+
 .bio {
-    width: 95%;
-    margin-top: calc(var(--pix) * 50);
-    font-size: calc(var(--pix) * 20);
+    margin-top: 3vw;
+    font-size: 2vw;
     color: #dfcbff;
+    margin: 0vw 3vw 3vw 8vw;
+}
+
+.contact {
+    width: 33vw;
+    display: grid;
+    grid-template-columns: repeat(1, 2fr);
+    align-items: center;
+    justify-content: center;
 }
 
 .icon {
+    width: 33vw;
     display: flex;
+    justify-content: center;
     align-items: center;
-    margin: calc(var(--pix) * 30);
+    margin: -2vw 0px 1vw 0px;
 }
 
 .icon a img {
-    width: calc(var(--pix) * 50);
-    margin: calc(var(--pix) * 15);
+    width: 4vw;
+    margin: 1.1vw;
     transition: 0.5s;
 }
 
@@ -258,18 +279,23 @@ body {
 }
 
 .icon a :hover {
-    scale: 120%;
+    scale: 1.3;
+}
+
+.linkto {
+    text-align: center;
 }
 
 .linkto a {
     text-decoration: none;
+    text-align: center;
     color: white;
-    font-size: calc(var(--pix) * 25);
+    font-size: 2vw;
     font-weight: bolder;
     background: linear-gradient(to right, #6200ff, #a934ec);
-    border-radius: calc(var(--pix) * 50);
-    margin: calc(var(--pix) * 30) calc(var(--pix) * 40);
-    padding: calc(var(--pix) * 15) calc(var(--pix) * 40);
+    border-radius: 999px;
+    /* margin: calc(var(--pot) * 30) calc(var(--pot) * 40); */
+    padding: 1.2vw 2.8vw;
     transition: 0.1s;
 }
 
@@ -278,15 +304,15 @@ body {
     font-weight: bold;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin: calc(var(--pix) * 30) 37px;
-    border: calc(var(--pix) * 3) solid rgb(132, 0, 255);
-    box-shadow: 0 0 calc(var(--pix) * 3) calc(var(--pix) * 2) rgba(133, 81, 255, 0.6), 0 0 calc(var(--pix) * 2) calc(var(--pix) * 3) rgba(241, 90, 255, 0.3);
+    margin: calc(var(--pot) * 30) calc(var(--pot) * 37);
+    /* border: calc(var(--pot) * 3) solid rgb(132, 0, 255); */
+    box-shadow: 0 0 calc(var(--pot) * 3) calc(var(--pot) * 2) rgba(133, 81, 255, 0.6), 0 0 calc(var(--pot) * 2) calc(var(--pot) * 3) rgba(241, 90, 255, 0.3);
 }
 
 .linkto :active {
-    text-shadow: 0 0 calc(var(--pix) * 5) #e100ff, 0 0 calc(var(--pix) * 5) #e100ff, 0 0 calc(var(--pix) * 5) #e100ff;
-    box-shadow: 0 0 calc(var(--pix) * 3) calc(var(--pix) * 2) rgba(255, 52, 164, 0.6), 0 0 calc(var(--pix) * 2) calc(var(--pix) * 3) rgba(93, 90, 255, 0.3);
-    border-color: rgb(89, 0, 255);
+    text-shadow: 0px 0px 0.3vw #a45eff, 0px 0px 0.3vw #ffffff, 0px 0px 0.3vw #b2a4ff;
+    box-shadow: 0px 0px 0.3vw 0.3vw rgba(255, 52, 164, 0.6), 0px 0px 0.3vw 0.3vw rgba(93, 90, 255, 0.3);
+    /* border-color: rgb(89, 0, 255); */
 }
 
 @keyframes hideItem {
@@ -310,21 +336,21 @@ body {
 }
 
 @media (min-width: 1200px) {
-    .img {
+    /* .img {
         margin-left: 13%;
     }
 
     .name {
-        font-size: calc(var(--pix) * 70);
+        font-size: calc(var(--pot) * 70);
     }
 
     .career {
-        font-size: 85px;
-    }
+        font-size: calc(var(--pot) * 85);
+    } */
 }
 
 @media (max-width: 900px) {
-    .img img {
+    /* .img img {
         transform: translateX(+200px);
         opacity: 0;
     }
@@ -333,24 +359,22 @@ body {
         overflow: hidden;
         margin-left: 0px;
         margin-right: 0px;
-    }
+    } */
 
-    .text {
-        width: 90vh;
-    }
+    /* .text {}
 
     .name {
-        font-size: calc(50px + 1vw);
+        font-size: calc(var(--pot)*40 + 1vw);
     }
 
     .career {
-        font-size: calc(65px + 1vw);
-    }
+        font-size: calc(var(--pot)*55 + 1vw);
+    } */
 }
 
 @media (max-width: 768px) {
     .bar {
-        height: calc(var(--pix) * 60);
+        height: calc(var(--pot) * 60);
         background-color: rgba(0, 0, 0, 0);
         backdrop-filter: blur(30px);
         background-blend-mode: overlay;
@@ -358,17 +382,17 @@ body {
     }
 
     .navbar {
-        height: calc(var(--pix) * 60);
+        height: calc(var(--pot) * 60);
         padding: 0px calc(0.5vw);
         list-style-type: none;
     }
 
     .nav-left {
         padding: 0px;
-        height: calc(var(--pix) * 40);
+        height: calc(var(--pot) * 40);
         list-style-type: none;
         display: flex;
-        margin: calc(var(--pix) * 10) calc(var(--pix) * 15) 0px calc(var(--pix) * 10);
+        margin: calc(var(--pot) * 10) calc(var(--pot) * 15) 0px calc(var(--pot) * 10);
         align-items: center;
     }
 
@@ -385,12 +409,12 @@ body {
     }
 
     .nav-item a {
-        font-size: calc(var(--pix) * 20);
+        font-size: calc(var(--pot) * 20);
         font-weight: bold;
         color: rgb(255, 255, 255);
         text-decoration: none;
-        padding: calc(var(--pix) * 8) 14px;
-        border-radius: calc(var(--pix) * 15);
+        padding: calc(var(--pot) * 8) 14px;
+        border-radius: calc(var(--pot) * 15);
         transition: all 0.5s;
         align-items: center;
     }
@@ -405,13 +429,13 @@ body {
     }
 
     .avt {
-        height: calc(var(--pix) * 40);
-        box-shadow: 0 0 calc(var(--pix) * 3) calc(var(--pix) * 2) rgba(133, 81, 255, 0.6), 0 0 calc(var(--pix) * 2) calc(var(--pix) * 3) rgba(241, 90, 255, 0.3);
+        height: calc(var(--pot) * 40);
+        box-shadow: 0 0 calc(var(--pot) * 3) calc(var(--pot) * 2) rgba(133, 81, 255, 0.6), 0 0 calc(var(--pot) * 2) calc(var(--pot) * 3) rgba(241, 90, 255, 0.3);
     }
 
     .avt:hover {
         background: linear-gradient(45deg, rgb(133, 81, 255), rgb(241, 90, 255));
-        box-shadow: 0 0 calc(var(--pix) * 3) calc(var(--pix) * 2) rgba(255, 52, 164, 0.6), 0 0 calc(var(--pix) * 2) calc(var(--pix) * 3) rgba(93, 90, 255, 0.3);
+        box-shadow: 0 0 calc(var(--pot) * 3) calc(var(--pot) * 2) rgba(255, 52, 164, 0.6), 0 0 calc(var(--pot) * 2) calc(var(--pot) * 3) rgba(93, 90, 255, 0.3);
     }
 
     .nav-small {
@@ -419,7 +443,6 @@ body {
         transform: translateY(+40px);
         opacity: 1;
     }
-
 }
 
 
